<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="292dp"
        android:layout_height="104dp"
        android:layout_marginBottom="400dp"
        android:contentDescription="@string/green_flag_logo"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_green_flag" />

    <TextView
        android:id="@+id/intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/museo_sans_500"
        android:text="@string/intro"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/check1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/museo_sans_300"


        android:text="@string/checked1"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toEndOf="@+id/checkmark3"
        app:layout_constraintTop_toBottomOf="@+id/intro" />

    <TextView
        android:id="@+id/check2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"

        android:fontFamily="@font/museo_sans_300"
        android:text="@string/checked2"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toEndOf="@+id/checkmark2"
        app:layout_constraintTop_toBottomOf="@+id/check1" />

    <TextView
        android:id="@+id/check3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"

        android:fontFamily="@font/museo_sans_300"
        android:text="@string/checked3"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toEndOf="@+id/checkmark1"
        app:layout_constraintTop_toBottomOf="@+id/check2" />

    <ImageView
        android:id="@+id/checkmark1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/check_mark1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkmark2"
        app:srcCompat="@drawable/tick" />

    <ImageView
        android:id="@+id/checkmark2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/check_mark2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkmark3"
        app:srcCompat="@drawable/tick" />

    <ImageView
        android:id="@+id/checkmark3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="13dp"
        android:contentDescription="@string/check_mark3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intro"
        app:srcCompat="@drawable/tick" />

    <ImageButton
        android:id="@+id/account_button"
        android:layout_width="284dp"
        android:layout_height="51dp"
        android:layout_marginBottom="36dp"
        android:contentDescription="@string/create_an_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/gradient_button_background"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/account_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/museo_sans_500"
        android:textSize="20sp"
        android:text="@string/create_an_account"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/account_button"
        app:layout_constraintEnd_toEndOf="@+id/account_button"
        app:layout_constraintStart_toStartOf="@+id/account_button"
        app:layout_constraintTop_toTopOf="@+id/account_button" />


</androidx.constraintlayout.widget.ConstraintLayout>