<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CreateAccount"
        android:background="@android:color/black">

        <ImageButton
            android:id="@+id/returnButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:background="@null"
            android:contentDescription="@string/back_button"
            android:minWidth="48dp"
            android:minHeight="48dp"
            app:layout_constraintEnd_toStartOf="@+id/create_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back_arrow"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/museo_sans_300"
            android:text="@string/create_an_account"
            android:textColor="@android:color/white"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider"
            android:layout_width="409dp"
            android:layout_height="0.9dp"
            android:layout_marginTop="20dp"
            android:background="?android:attr/listDivider"
            android:backgroundTint="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_account" />

        <TextView
            android:id="@+id/email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/email_address"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <TextView
            android:id="@+id/password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/create_password"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_exist" />

        <TextView
            android:id="@+id/password_repeat_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/repeat_password"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@android:color/white"
            android:ems="10"
            android:hint="@string/see_criteria_below"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColorHint="#757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_text" />

        <EditText
            android:id="@+id/editTextTextPassword3"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@android:color/white"
            android:ems="10"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_repeat_text"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="350dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:background="@android:color/white"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_text"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/password_limitation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="70dp"
            android:fontFamily="@font/museo_sans_300"
            android:text="@string/password_limit"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/next_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_not_match"
            app:layout_constraintVertical_bias="0.477" />

        <ImageButton
            android:id="@+id/next_button"
            android:layout_width="294dp"
            android:layout_height="49dp"
            android:layout_marginTop="150dp"
            android:layout_marginBottom="50dp"
            android:alpha="0.4"
            android:backgroundTint="@color/cardview_dark_background"
            android:backgroundTintMode="src_over"
            android:clickable="false"
            android:contentDescription="@string/next_button"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_not_match"
            app:layout_constraintVertical_bias="0.503"
            app:srcCompat="@drawable/gradient_button_background"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/next_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/museo_sans_300"
            android:text="@string/next_string"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/next_button"
            app:layout_constraintEnd_toEndOf="@+id/next_button"
            app:layout_constraintStart_toStartOf="@+id/next_button"
            app:layout_constraintTop_toTopOf="@+id/next_button" />


        <TextView
            android:id="@+id/password_not_match"
            android:layout_width="340dp"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/error_message_border"
            android:paddingLeft="60dp"
            android:paddingTop="15dp"
            android:paddingRight="60dp"
            android:paddingBottom="15dp"
            android:text="@string/password_invalid"
            android:textColor="@android:color/white"
            android:textSize="14.2sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword3" />

        <ImageView
            android:id="@+id/password_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/password_not_match"
            app:layout_constraintEnd_toEndOf="@+id/password_not_match"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toStartOf="@+id/password_not_match"
            app:layout_constraintTop_toTopOf="@+id/password_not_match"
            app:layout_constraintVertical_bias="0.35000002"
            app:srcCompat="@drawable/cross"
            android:contentDescription="@string/error_symbol"/>

        <TextView
            android:id="@+id/email_exist"
            android:layout_width="340dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/error_message_border"
            android:gravity="center"
            android:paddingLeft="90dp"
            android:paddingTop="10dp"
            android:paddingRight="90dp"
            android:paddingBottom="10dp"
            android:text="@string/email_exist"
            android:textColor="@android:color/white"
            android:textSize="14.2sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

        <ImageView
            android:id="@+id/email_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/email_exist"
            app:layout_constraintEnd_toEndOf="@+id/email_exist"
            app:layout_constraintHorizontal_bias="0.07"
            app:layout_constraintStart_toStartOf="@+id/email_exist"
            app:layout_constraintTop_toTopOf="@+id/email_exist"
            app:layout_constraintVertical_bias="0.35000002"
            app:srcCompat="@drawable/cross"
            android:contentDescription="@string/error_symbol"/>

        <ImageView
            android:id="@+id/email_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/editTextTextEmailAddress"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
            app:layout_constraintTop_toTopOf="@+id/editTextTextEmailAddress"
            app:srcCompat="@drawable/tick"
            android:contentDescription="@string/error_symbol"/>

        <ImageView
            android:id="@+id/password_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="316dp"
            android:layout_marginEnd="18dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/editTextTextPassword"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
            app:layout_constraintTop_toTopOf="@+id/editTextTextPassword"
            app:srcCompat="@drawable/tick"
            android:contentDescription="@string/error_symbol"/>

        <ImageView
            android:id="@+id/password_reenter_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/editTextTextPassword3"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword3"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPassword3"
            app:layout_constraintTop_toTopOf="@+id/editTextTextPassword3"
            app:srcCompat="@drawable/tick"
            android:contentDescription="@string/error_symbol"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>